
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int CRAPLEN ;
 scalar_t__* buf ;
 scalar_t__* dacrap ;
 int printf (char*,...) ;

void diffit()
{
int i;
 printf("DIFF:\n");
 for (i=0; i < CRAPLEN; i++)
 {
  if (buf[i] != dacrap[i])
   printf("Offset %d: 0x%x -> 0x%x\n", i, dacrap[i], buf[i]);
 }
 printf("*****\n");
}
